Fix: Nav bar position set to sticky disabled scrollbar

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,16 @@ html {
   cursor: url("assets/pointer.svg"), auto;
   font-family: "Poor Story", system-ui;
 }
-body {
+/* body {
   margin: 0;
   padding: 0;
+} */
+body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 .home-section {
@@ -19,12 +26,17 @@ body {
   cursor: url("assets/cursor.svg"), auto;
 }
 nav {
-  margin: 0 5px;
+  z-index: 1000;
+  margin: 0 10px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   border: 4px solid black;
   border-top-left-radius: 37px 140px;
   border-top-right-radius: 23px 130px;
   border-bottom-left-radius: 20px 109px;
   border-bottom-right-radius: 100px 44px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 10px;
   display: flex;
   justify-content: space-around;
@@ -35,11 +47,12 @@ nav a {
   cursor: url("assets/cursor.svg"), auto;
   text-decoration: none;
   color: black;
+  font-size: 1.2em;
   font-weight: bold;
   padding: 10px;
 }
-
 .pre-code {
+  display: flex;
   padding: 20px;
   width: fit-content;
   border: 4px solid black;
@@ -120,4 +133,7 @@ nav a {
 }
 h1 {
   margin: 0 5px;
+}
+img {
+  cursor: url("assets/cursor.svg"), auto;
 }
